cabal-version:      3.0
name:               bench-calls
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bench-calls
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, criterion >= 1.4
    hs-source-dirs:   app
    default-language: Haskell2010
    c-sources:  app/foo.c
